임폴트삭제

--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
     <div class="container px-0 headerwrap">
       <div class="head1wrap">
         <a
+          class="top-text"
           href="https://www.samsungcard.com/?click=ins_card_home"
           title="삼성카드 홈페이지 바로가기 새창 열림"
           >삼성카드 홈페이지</a
         >
-        <a href="#">로그인</a>
+        <a class="top-text" href="#">로그인</a>
       </div>
 
       <!-- <div class="container box2"> -->
       <div class="head2wrap">
         <h3 class="logo2">
-          <a href="/main/UISRCO0101M0.jsp?click=ins_home"
-            ><span class="hide">Samsung Card 다이렉트보험</span></a
+          <a href="/main/UISRCO0101M0.jsp?click=ins_home">
+            img
+            <span class="hide">Samsung Card 다이렉트보험</span></a
           >
         </h3>
-        <div class="menu">
+        <div class="menu1">
           <a href="/insurance/UISRCO0201M0.jsp?click=ins_gnb_product">상품</a>
           <a href="/insurance/UISRCO0401M0.jsp?click=ins_gnb_event">이벤트</a>
           <a href="/customer-service/UISRCS0101M0.jsp">상담예약</a>
