updated with footer

--- a/index.html
+++ b/index.html
@@ -245,7 +245,50 @@
     </section>
 
     <!-- maureensmoon -->
-    <footer class="container"></footer>
+    <footer class ="container px-0 footwrap">
+        <div class = nav-wrap1>
+            <div class="nav-call">
+              <ul>
+                <li>
+                  <strong style>대표전화</strong>
+                  <a href="tel:1588-8700" style>1588-8700</a>
+                </li>
+                <li>
+                  <strong style>카드신청</strong>
+                  <a href="tel:1688-1133" style>1688-1133</a>
+                </li>
+                <li>
+                <Strong>보험상품 모집 수수료율<Strong>
+                </li>
+              </ul>
+            </div>
+            <div class="nav-sns">
+              <a class = "sns_ico1"></a>
+              <a class = "sns_ico2"></a>
+              <a class = "sns_ico3"></a>
+              <a class = "sns_ico4"></a>
+              <a class = "sns_ico5"></a>
+            </div>
+        </div>
+        <div class="nav-wrap2">
+            <div class="nav-fnb">
+              <ul>
+                <strong>회사소개</strong>
+                <a>이용약관</a>
+                <strong>개인정보처리방침</strong>
+              </ul>
+              <ul>
+                <a>사업자정보확인</a>
+                <a>손해보험 보험대리점등록증</a>
+                <a>생명보험 보험대리점등록증</a>
+              </ul>
+            </div>
+            <div class="nav-site">
+              <button type="button">패밀리사이트</button>
+              </div>
+        </div>
+             
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
