--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               </ul>
             </div>
             <div class="nav-site">
-              <button type="button">패밀리사이트</button>
+              <button type="button">패밀리사이트2</button>
               </div>
         </div>
              
